// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ssr-hello-world build should generate a production server 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4000/skuDefaultClientEntry-b8efa93ad3ab8918f8db.css\\">
    </head>
    <body>
      <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY\\">Hello World</div></div></div>
      <script type=\\"text/javascript\\" src=\\"http://localhost:4000/runtime-014340d9b9907db3205b.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4000/vendors~skuDefaultClientEntry-c447b376225163cbf650.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4000/skuDefaultClientEntry-b0ae8ed890757176c909.js\\"></script>
    
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4000/skuDefaultClientEntry-b8efa93ad3ab8918f8db.css\\" />
    </head>
    <body>
      <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY\\">Hello World</div></div></div>
      <script type=\\"text/javascript\\" src=\\"http://localhost:4000/runtime-014340d9b9907db3205b.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4000/vendors~skuDefaultClientEntry-c447b376225163cbf650.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4000/skuDefaultClientEntry-b0ae8ed890757176c909.js\\"></script>
    </body>
  </html>
",
  "warnings": Array [],
}
`;

exports[`ssr-hello-world start should start a development server 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:8000/skuDefaultClientEntry.css\\">
    </head>
    <body>
      <div id=\\"app\\"><div class=\\"lessStyles__root___1brbpTo jsStyles-css__root___Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"lessStyles__nested___3YtmnHj jsStyles-css__nested___lwsthgY\\">Hello World</div></div></div>
      <script type=\\"text/javascript\\" src=\\"http://localhost:8000/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:8000/vendors~skuDefaultClientEntry.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:8000/skuDefaultClientEntry.js\\"></script>
    
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:8000/skuDefaultClientEntry.css\\" />
    </head>
    <body>
      <div id=\\"app\\"><div class=\\"lessStyles__root___1brbpTo jsStyles-css__root___Jlnxw97\\" data-reactroot=\\"\\"><div class=\\"lessStyles__nested___3YtmnHj jsStyles-css__nested___lwsthgY\\">Hello World</div></div></div>
      <script type=\\"text/javascript\\" src=\\"http://localhost:8000/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:8000/vendors~skuDefaultClientEntry.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:8000/skuDefaultClientEntry.js\\"></script>
    </body>
  </html>
",
  "warnings": Array [],
}
`;
